[gd_scene load_steps=8 format=3 uid="uid://dtg63fcudhw83"]

[ext_resource type="Script" path="res://Game.gd" id="1_s6cvc"]
[ext_resource type="Texture2D" uid="uid://lk2sqxru7uom" path="res://background.png" id="2_23esp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxStats"]
content_margin_left = 18.0
content_margin_top = 14.0
content_margin_right = 18.0
content_margin_bottom = 14.0
bg_color = Color(0, 0, 0, 0)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxMain"]
content_margin_left = 30.0
content_margin_top = 28.0
content_margin_right = 30.0
content_margin_bottom = 28.0
bg_color = Color(0.105882, 0.105882, 0.105882, 0)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxEvent"]
content_margin_left = 24.0
content_margin_top = 20.0
content_margin_right = 24.0
content_margin_bottom = 20.0
bg_color = Color(0, 0, 0, 0)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxButtons"]
content_margin_left = 20.0
content_margin_top = 16.0
content_margin_right = 20.0
content_margin_bottom = 16.0
bg_color = Color(0, 0, 0, 0)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7ilp8"]

[node name="Game" type="Node2D"]
script = ExtResource("1_s6cvc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsOverlay" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchor_left = 0.5
anchor_right = 1.0
offset_left = 60.0
offset_top = 20.0
offset_right = -60.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChoicesOverlay" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchor_left = 0.2
anchor_right = 0.8
anchor_top = 0.08
anchor_bottom = 0.15
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/UI/ChoicesOverlay"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxButtons")

[node name="ButtonsRow" type="HBoxContainer" parent="CanvasLayer/UI/ChoicesOverlay/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="OptionA" type="Button" parent="CanvasLayer/UI/ChoicesOverlay/PanelContainer/ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Decisión A"

[node name="OptionB" type="Button" parent="CanvasLayer/UI/ChoicesOverlay/PanelContainer/ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Decisión B"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/UI/StatsOverlay"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxStats")

[node name="StatsRow" type="HBoxContainer" parent="CanvasLayer/UI/StatsOverlay/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="MilitaryStat" type="VBoxContainer" parent="CanvasLayer/UI/StatsOverlay/PanelContainer/StatsRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="CanvasLayer/UI/StatsOverlay/PanelContainer/StatsRow/MilitaryStat"]
layout_mode = 2
text = "Militar"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/UI/StatsOverlay/PanelContainer/StatsRow/MilitaryStat"]
layout_mode = 2
size_flags_horizontal = 3
value = 50.0

[node name="SocialStat" type="VBoxContainer" parent="CanvasLayer/UI/StatsOverlay/PanelContainer/StatsRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="CanvasLayer/UI/StatsOverlay/PanelContainer/StatsRow/SocialStat"]
layout_mode = 2
text = "Social"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/UI/StatsOverlay/PanelContainer/StatsRow/SocialStat"]
layout_mode = 2
size_flags_horizontal = 3
value = 50.0

[node name="ReligionStat" type="VBoxContainer" parent="CanvasLayer/UI/StatsOverlay/PanelContainer/StatsRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="CanvasLayer/UI/StatsOverlay/PanelContainer/StatsRow/ReligionStat"]
layout_mode = 2
text = "Religión"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/UI/StatsOverlay/PanelContainer/StatsRow/ReligionStat"]
layout_mode = 2
size_flags_horizontal = 3
value = 50.0

[node name="EconomyStat" type="VBoxContainer" parent="CanvasLayer/UI/StatsOverlay/PanelContainer/StatsRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="CanvasLayer/UI/StatsOverlay/PanelContainer/StatsRow/EconomyStat"]
layout_mode = 2
text = "Economía"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/UI/StatsOverlay/PanelContainer/StatsRow/EconomyStat"]
layout_mode = 2
size_flags_horizontal = 3
value = 50.0

[node name="Background" type="TextureRect" parent="CanvasLayer/UI"]
modulate = Color(1, 1, 1, 0.4)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_23esp")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 220
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 40

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxMain")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 18

[node name="EventPanel" type="PanelContainer" parent="CanvasLayer/UI/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEvent")

[node name="EventVBox" type="VBoxContainer" parent="CanvasLayer/UI/MarginContainer/PanelContainer/VBoxContainer/EventPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="DecisionsPanel" type="PanelContainer" parent="CanvasLayer/UI/MarginContainer/PanelContainer/VBoxContainer/EventPanel/EventVBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxButtons")

[node name="ButtonsRow" type="HBoxContainer" parent="CanvasLayer/UI/MarginContainer/PanelContainer/VBoxContainer/EventPanel/EventVBox/DecisionsPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="OptionA" type="Button" parent="CanvasLayer/UI/MarginContainer/PanelContainer/VBoxContainer/EventPanel/EventVBox/DecisionsPanel/ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Decisión A"

[node name="OptionB" type="Button" parent="CanvasLayer/UI/MarginContainer/PanelContainer/VBoxContainer/EventPanel/EventVBox/DecisionsPanel/ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Decisión B"

[node name="PortraitContainer" type="CenterContainer" parent="CanvasLayer/UI/MarginContainer/PanelContainer/VBoxContainer/EventPanel/EventVBox"]
custom_minimum_size = Vector2(0, 760)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Shadow" type="TextureRect" parent="CanvasLayer/UI/MarginContainer/PanelContainer/VBoxContainer/EventPanel/EventVBox/PortraitContainer"]
modulate = Color(0, 0, 0, 0.35)
custom_minimum_size = Vector2(720, 980)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("CompressedTexture2D_7ilp8")
expand_mode = 1
stretch_mode = 5

[node name="Portrait" type="TextureRect" parent="CanvasLayer/UI/MarginContainer/PanelContainer/VBoxContainer/EventPanel/EventVBox/PortraitContainer"]
custom_minimum_size = Vector2(720, 980)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("CompressedTexture2D_7ilp8")
expand_mode = 1
stretch_mode = 5

[node name="DialogueBox" type="VBoxContainer" parent="CanvasLayer/UI/MarginContainer/PanelContainer/VBoxContainer/EventPanel/EventVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="SpeakerLabel" type="Label" parent="CanvasLayer/UI/MarginContainer/PanelContainer/VBoxContainer/EventPanel/EventVBox/DialogueBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Consejo Real"
horizontal_alignment = 1

[node name="DialogueLabel" type="RichTextLabel" parent="CanvasLayer/UI/MarginContainer/PanelContainer/VBoxContainer/EventPanel/EventVBox/DialogueBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 28
text = "..."
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="StatusLabel" type="Label" parent="CanvasLayer/UI/MarginContainer/PanelContainer/VBoxContainer/EventPanel/EventVBox"]
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 3
